--- a/SecondProject/src/main/resources/templates/fragments/common.html
+++ b/SecondProject/src/main/resources/templates/fragments/common.html
@@ -28,6 +28,9 @@
             <li class="nav-item" th:classappend="${menu} == 'board'? 'active'">
                 <a class="nav-link" href="#" th:href="@{/boards}">게시판 <span class="sr-only" th:if="${menu} == 'board'">(current)</span></a>
             </li>
+            <li class="nav-item" th:classappend="${menu} == 'users'? 'active'">
+                <a class="nav-link" href="#" th:href="@{/users}">회원 목록 <span class="sr-only" th:if="${menu} == 'users'">(current)</span></a>
+            </li>
 
         </ul>
 
