--- a/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
+++ b/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/common ::head('Second')">
+<head th:replace="fragments/common ::head('My frist')">
     <!--    <meta charset="utf-8">-->
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
 
@@ -13,7 +13,7 @@
 
 
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('join')">
 </nav>
 <!-- Optional JavaScript; choose one of the two! -->
 
@@ -29,42 +29,36 @@
 </body>
 
 <!--내용-->
-
+<style>
+    .fieldError {
+        border-color: #bd2130;
+    }
+</style>
 <body class="bg-light">
 <div class="container">
-    <h2>회원 목록</h2>
-    <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">name</th>
-            <th scope="col">id</th>
-            <th scope="col">email</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user : ${users}">
-            <td> <a th:text="${user.name}" th:href="@{/users/{id} (id=${user.id})}"></a></td>
-            <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
-            <td th:text="${user.loginid}"></td>
-            <td th:text="${user.email}"></td>
-        </tr>
-        </tbody>
-
-    </table>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-    </nav>
-    <div class="text-right">
-        <a type="button" class="btn btn-primary" th:href="@{/boards/new}">글쓰기</a>
-    </div>
+    <h2>게시판</h2>
+<!--    th:action="/boards/{boardId}/edit" 이렇게 사용 x {}가 있으므로-->
+<!--    action 생략 가능. 같은 url이므로 post가.-->
+    <form role="form" th:action="@{/boards/{boardId}/edit(boardId=${boardForm.id})}" th:object="${boardForm}" method="post">
+        <div class="form-group">
+            <input type = "hidden" th:field="*{id}" />
+            <div class="form-group">
+                <label for="title">제목</label>
+                <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
+            </div>
+            <div class="form-group">
+                <label for="name">작성자</label>
+                <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
+            </div>
+            <label for="content">내용</label>
+            <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
+        </div>
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">확인</button>
+            <a type="button" class="btn btn-primary" th:href="@{/boards}">취소</a>
+        </div>
+    </form>
 </div>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script>window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')</script><script src="/docs/4.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="form-validation.js"></script>
