--- a/SecondProject/src/main/resources/templates/boards/writeboard.html
+++ b/SecondProject/src/main/resources/templates/boards/writeboard.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/common ::head('My frist')">
+<head th:replace="fragments/common ::head('Second')">
     <!--    <meta charset="utf-8">-->
     <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
 
@@ -36,52 +36,23 @@
 </style>
 <body class="bg-light">
 <div class="container">
-    <form role="form" action="/join" th:object="${joinForm}" method="post">
-        <div class="py-5 text-center">
-            <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
-            <h2>회원가입</h2>
-        </div>
-
-        <div class="row">
-            <div class="col-md-8 order-md-1">
-                <form class="needs-validation" novalidate>
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="name">Id</label>
-                            <input type="text" th:field="*{loginId}" class="form-control" id="name" placeholder="write Id"
-                                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
-                            <p th:if="${#fields.hasErrors('loginId')}" th:errors="*{loginId}">Incorrect date</p>
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="password">password</label><span class="text-muted">(Optional)</span></label>
-                        <input type="text" th:field = "*{password}" class="form-control" id="password" placeholder="write password" required>
-                        <div class="invalid-feedback">
-                            Please enter your shipping city.
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="name">Name</label><span class="text-muted">(Optional)</span></label>
-                        <input type="text" th:field = "*{name}" class="form-control" id="name" placeholder="write name" required>
-                        <div class="invalid-feedback">
-                            Please enter your shipping street.
-                        </div>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="email">email</label><span class="text-muted">(Optional)</span>
-                        <input type="text" th:field = "*{email}" class="form-control" id="email" placeholder="write email" required>
-                        <div class="invalid-feedback">
-                            Please enter your shipping zipcode.
-                        </div>
-                    </div>
-
-                    <hr class="mb-4">
-                    <button class="btn btn-primary btn-lg btn-block" type="submit">완료</button>
-                </form>
+    <h2>게시판</h2>
+    <form role="form" action="/boards/new" th:object="${boardForm}" method="post">
+        <div class="form-group">
+            <div class="form-group">
+                <label for="title">제목</label>
+                <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
             </div>
+            <div class="form-group">
+                <label for="name">작성자</label>
+                <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
+            </div>
+            <label for="content">내용</label>
+            <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
+        </div>
+        <div class="text-right">
+            <button type="submit" class="btn btn-primary">확인</button>
+            <a type="button" class="btn btn-primary" th:href="@{/boards}">취소</a>
         </div>
     </form>
 </div>
