--- a/SecondProject/src/main/resources/templates/fragments/common.html
+++ b/SecondProject/src/main/resources/templates/fragments/common.html
@@ -36,8 +36,8 @@
 
 <!--        <a class="btn btn-secondary mr-2 my-2 my-sm-0" th:href="@{/account/register}" sec:authorize="!isAuthenticated()">register</a>-->
 <!--        <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/account/login}" sec:authorize="!isAuthenticated()">login</a> &lt;!&ndash; 로그인이 안된 경우  &ndash;&gt;-->
-        <a class="btn btn-secondary mr-2 my-2 my-sm-0" th:href="@{/join}">join</a>
-        <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/login}">login</a> <!-- 로그인이 안된 경우  -->
+        <a class="btn btn-secondary mr-2 my-2 my-sm-0" th:href="@{/register}">회원가입</a>
+        <a class="btn btn-secondary my-2 my-sm-0" th:href="@{/login}">로그인</a> <!-- 로그인이 안된 경우  -->
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
