--- a/SecondProject/src/main/resources/templates/users/loginForm.html
+++ b/SecondProject/src/main/resources/templates/users/loginForm.html
@@ -18,24 +18,25 @@
     <div class="py-5 text-center">
         <h2>로그인</h2>
     </div>
+<!--th:object="${loginForm}"-->
+    <form role="form" action="/user/login" method="post">
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
-    <form role="form" action="/login" th:action th:object="${loginForm}" method="post">
-
-        <div th:if="${#fields.hasGlobalErrors()}">
-            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>
-        </div>
+<!--        <div th:if="${#fields.hasGlobalErrors()}">-->
+<!--            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>-->
+<!--        </div>-->
 
         <div>
             <label for="loginId">로그인 ID</label>
             <input type="text" id="loginId" th:field="*{loginid}" class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{loginid}" />
+<!--            <div class="field-error" th:errors="*{loginid}" />-->
         </div>
         <div>
             <label for="password">비밀번호</label>
             <input type="password" id="password" th:field="*{password}" class="form-control"
                    th:errorclass="field-error">
-            <div class="field-error" th:errors="*{password}" />
+<!--            <div class="field-error" th:errors="*{password}" />-->
         </div>
 
         <hr class="my-4">
