로그인 권한

--- a/SecondProject/src/main/resources/templates/users/list.html
+++ b/SecondProject/src/main/resources/templates/users/list.html
@@ -23,6 +23,7 @@
             <th scope="col">name</th>
             <th scope="col">id</th>
             <th scope="col">email</th>
+            <th scope="col">role</th>
         </tr>
         </thead>
         <tbody>
@@ -31,6 +32,7 @@
             <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
             <td th:text="${user.loginid}"></td>
             <td th:text="${user.email}"></td>
+            <td th:text="${user.role}"></td>
         </tr>
         </tbody>
 
