--- a/SecondProject/src/main/resources/templates/users/loginForm.html
+++ b/SecondProject/src/main/resources/templates/users/loginForm.html
@@ -1,52 +1,38 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/common ::head('Second')">
-    <!--    <meta charset="utf-8">-->
-    <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
 
-    <!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
-    <!--    <link th:href="@{/form-validation.css}" rel="stylesheet">-->
-
-    <!--    <title>My First</title>-->
 </head>
 
 <body>
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
+</nav>
 
 <div class="container">
 
     <div class="py-5 text-center">
         <h2>로그인</h2>
     </div>
-<!--th:object="${loginForm}"-->
-    <form role="form" action="/user/login" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-
-<!--        <div th:if="${#fields.hasGlobalErrors()}">-->
-<!--            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}">전체 오류 메시지</p>-->
-<!--        </div>-->
-
+    <form role="form" action="/login" method="post">
         <div>
-            <label for="loginId">로그인 ID</label>
-            <input type="text" id="loginId" th:field="*{loginid}" class="form-control"
-                   th:errorclass="field-error">
-<!--            <div class="field-error" th:errors="*{loginid}" />-->
+            <label>로그인 ID</label>
+            <input type="text" name="username">
+            <!--            <div class="field-error" th:errors="*{loginid}" />-->
         </div>
         <div>
-            <label for="password">비밀번호</label>
-            <input type="password" id="password" th:field="*{password}" class="form-control"
-                   th:errorclass="field-error">
-<!--            <div class="field-error" th:errors="*{password}" />-->
+            <label>비밀번호</label>
+            <input type="password" name="password">
+            <!--            <div class="field-error" th:errors="*{password}" />-->
         </div>
 
         <hr class="my-4">
 
         <div class="row">
             <div class="col">
-                <button class="w-100 btn btn-primary btn-lg" type="submit">로그인</button>
+                <button class="w-50 btn btn-primary btn-lg" type="submit">로그인</button>
             </div>
             <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg" onclick="location.href='items.html'"
+                <button class="w-50 btn btn-secondary btn-lg" onclick="location.href='items.html'"
                         th:onclick="|location.href='@{/}'|"
                         type="button">취소</button>
             </div>
