회원 목록, 디테일, 추방

--- a/SecondProject/src/main/resources/templates/users/list.html
+++ b/SecondProject/src/main/resources/templates/users/list.html
@@ -28,7 +28,7 @@
         </thead>
         <tbody>
         <tr th:each="user : ${users}">
-            <td> <a th:text="${user.name}" th:href="@{/users/{id} (id=${user.id})}"></a></td>
+            <td> <a th:text="${user.name}" th:href="@{/admin/users/{id} (id=${user.id})}"></a></td>
             <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
             <td th:text="${user.loginid}"></td>
             <td th:text="${user.email}"></td>
