--- a/SecondProject/src/main/resources/templates/users/userDetail.html
+++ b/SecondProject/src/main/resources/templates/users/userDetail.html
@@ -9,7 +9,6 @@
 </nav>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
 </body>
 
 <!--내용-->
@@ -26,28 +25,39 @@
             <table class="table table-condensed">
                 <thead>
                 <tr>
-                    <th>제목</th>
-                    <td th:text="${boardForm.title}"></td>
+                    <th>이름</th>
+                    <td th:text="${memberForm.name}"></td>
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <th>글쓴이</th>
-                    <td th:text="${boardForm.name}"></td>
+                    <th>아이디</th>
+                    <td th:text="${memberForm.loginid}"></td>
                 </tr>
                 <tr>
-                    <td colspan="2" th:text="${boardForm.content}"></td>
+                    <th>이메일</th>
+                    <td th:text="${memberForm.email}"></td>
+                </tr>
+                <tr>
+                    <th>권한</th>
+                    <td th:text="${memberForm.role}"></td>
+                </tr>
+                <tr>
+                    <th>주소</th>
+                </tr>
+                <tr>
+                    <th>연락처</th>
                 </tr>
                 </tbody>
             </table>
             <div class="text-right">
-                <a type="button" class="btn btn-primary" th:href="@{/boards/{id}/edit(id=${boardForm.id})}" methods="get">수정</a>
-                <form id="delete-form" th:action="@{/boards/{id}/delete(id=${boardForm.id})}" method="post">
+                <a type="button" class="btn btn-primary" th:href="@{/users/{id}/edit(id=${memberForm.id})}" methods="get">수정</a>
+                <form id="delete-form" th:action="@{/users/{id}/delete(id=${memberForm.id})}" method="post">
                     <input type="hidden" name="_method" value="delete"/>
-                    <button type="submit" class="btn btn-primary">삭제</button>
+                    <button type="submit" class="btn btn-primary">회원 추방</button>
                 </form>
                 <!--            <a type="button" class="btn btn-primary" th:href="@{/boards/{id}/delete(id=${boardForm.id})}">삭제</a>-->
-                <a type="button" class="btn btn-primary" th:href="@{/boards}">목록</a>
+                <a type="button" class="btn btn-primary" th:href="@{/admin/users}">회원 목록</a>
             </div>
         </div>
     </div>
