--- a/SecondProject/src/main/resources/templates/home.html
+++ b/SecondProject/src/main/resources/templates/home.html
@@ -10,8 +10,7 @@
 <main role="main" class="container">
 
     <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>김정우의 두번째 토이프로젝트</h1>
     </div>
 
 </main>
