--- a/SecondProject/src/main/resources/templates/boards/pagingList.html
+++ b/SecondProject/src/main/resources/templates/boards/pagingList.html
@@ -1,39 +1,20 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/common ::head('My frist')">
-    <!--    <meta charset="utf-8">-->
-    <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-
-    <!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
-    <!--    <link th:href="@{/form-validation.css}" rel="stylesheet">-->
-
-    <!--    <title>My First</title>-->
 </head>
 
 
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
 </nav>
-<!-- Optional JavaScript; choose one of the two! -->
-
-<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-
-<!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
--->
 </body>
-
-<!--내용-->
-
 <body class="bg-light">
 <div class="container">
     <h2>게시판</h2>
-    <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>
+<!--    <div>총 건수 : <span th:text="${#lists.size(boards)}"></span></div>-->
+    <div>총 건수 : <span th:text="${page.getTotal()}"></span></div>
     <table class="table">
         <thead>
         <tr>
@@ -52,15 +33,19 @@
         </tbody>
 
     </table>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-    </nav>
+    <div class="text-center">
+        <nav aria-label="Page navigation">
+            <ul class="pagination pagination-sm">
+                <li th:if="${page.isPrev()}" class="page-item"><a th:href="@{/boards?page={page}(page = ${page.getCurPage()-1})}" class="page-link" href="#">Prev</a></li>
+                <li th:unless="${page.isPrev()}" class="page-item disabled"><a class="page-link">Prev</a></li>
+                <li class="page-item" th:each="num, index: ${#numbers.sequence(page.getStartPage(), page.getEndPage())}">
+                    <a th:href="@{/boards?page={page}(page = ${index.current-1})}" th:text="${num}" class="page-link" href="">1</a>
+                </li>
+                <li th:if="${page.isNext()}" class="page-item"><a th:href="@{/boards?page={page}(page = ${page.getCurPage()+1})}" class="page-link" href="#">Next</a></li>
+                <li th:unless="${page.isNext()}" class="page-item disabled"><a class="page-link">Next</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="text-right">
         <a type="button" class="btn btn-primary" th:href="@{/boards/new}">글쓰기</a>
     </div>
