member paging add

--- a/SecondProject/src/main/resources/templates/fragments/common.html
+++ b/SecondProject/src/main/resources/templates/fragments/common.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="#" th:href="@{/boards}">게시판 <span class="sr-only" th:if="${menu} == 'board'">(current)</span></a>
             </li>
             <li class="nav-item" th:classappend="${menu} == 'users'? 'active'">
-                <a class="nav-link" href="#" th:href="@{/admin/members}">회원 목록 <span class="sr-only" th:if="${menu} == 'users'">(current)</span></a>
+                <a class="nav-link" href="#" th:href="@{/admin/users}">회원 목록 <span class="sr-only" th:if="${menu} == 'users'">(current)</span></a>
             </li>
 
         </ul>
