--- a/SecondProject/src/main/resources/templates/users/pagingMemberList.html
+++ b/SecondProject/src/main/resources/templates/users/pagingMemberList.html
@@ -27,24 +27,24 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="member : ${members}">
-            <td> <a th:text="${member.loginid}" th:href="@{/admin/members/{id} (id=${member.id})}"></a></td>
+        <tr th:each="user : ${users}">
+            <td> <a th:text="${user.loginid}" th:href="@{/admin/users/{id} (id=${user.id})}"></a></td>
             <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
-            <td th:text="${member.name}"></td>
-            <td th:text="${member.email}"></td>
-            <td th:text="${member.role}"></td>
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.role}"></td>
         </tr>
         </tbody>
 
     </table>
     <nav aria-label="Page navigation">
         <ul class="pagination pagination-sm">
-            <li th:if="${page.isPrev()}" class="page-item"><a th:href="@{/admin/members?page={page}(page = ${page.getCurPage()-1})}" class="page-link" href="#">Prev</a></li>
+            <li th:if="${page.isPrev()}" class="page-item"><a th:href="@{/admin/users?page={page}(page = ${page.getCurPage()-1})}" class="page-link" href="#">Prev</a></li>
             <li th:unless="${page.isPrev()}" class="page-item disabled"><a class="page-link">Prev</a></li>
             <li class="page-item" th:each="num, index: ${#numbers.sequence(page.getStartPage(), page.getEndPage())}">
-                <a th:href="@{/admin/members?page={page}(page = ${index.current-1})}" th:text="${num}" class="page-link" href="">1</a>
+                <a th:href="@{/admin/users?page={page}(page = ${index.current-1})}" th:text="${num}" class="page-link" href="">1</a>
             </li>
-            <li th:if="${page.isNext()}" class="page-item"><a th:href="@{/admin/members?page={page}(page = ${page.getCurPage()+1})}" class="page-link" href="#">Next</a></li>
+            <li th:if="${page.isNext()}" class="page-item"><a th:href="@{/admin/users?page={page}(page = ${page.getCurPage()+1})}" class="page-link" href="#">Next</a></li>
             <li th:unless="${page.isNext()}" class="page-item disabled"><a class="page-link">Next</a></li>
         </ul>
     </nav>
