게시판 수정, 작성 작성자 수정

--- a/SecondProject/src/main/resources/templates/boards/writeBoard.html
+++ b/SecondProject/src/main/resources/templates/boards/writeBoard.html
@@ -37,16 +37,16 @@
 <body class="bg-light">
 <div class="container">
     <h2>게시판</h2>
-    <form role="form" action="/boards/new" th:object="${boardForm}" method="post">
+    <form role="form" th:action="@{/boards/new}" th:object="${boardForm}" method="post">
         <div class="form-group">
             <div class="form-group">
                 <label for="title">제목</label>
                 <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
             </div>
-            <div class="form-group">
-                <label for="name">작성자</label>
-                <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
-            </div>
+<!--            <div class="form-group">-->
+<!--                <label for="name">작성자</label>-->
+<!--                <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">-->
+<!--            </div>-->
             <label for="content">내용</label>
             <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
         </div>
