--- a/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
+++ b/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
@@ -30,8 +30,12 @@
                 <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
             </div>
             <div class="form-group">
-                <label for="name">작성자</label>
-                <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
+<!--                <h3 class="form-control" id="name" th:text="*{name}" ></h3>-->
+                <input type="hidden" th:field="${boardForm.name}" />
+            </div>
+            <div class="form-group">
+                <!--                <h3 class="form-control" id="name" th:text="*{name}" ></h3>-->
+                <input type="hidden" th:field="${boardForm.loginid}" />
             </div>
             <label for="content">내용</label>
             <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
