--- a/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
+++ b/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
@@ -33,7 +33,7 @@
                 <input type="hidden" th:field="*{name}" />
             </div>
             <div class="form-group">
-                <input type="hidden" th:field="*{loginid}" />
+                <input type="hidden" th:field="*{loginId}" />
             </div>
             <label for="content">내용</label>
             <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
