--- a/SecondProject/src/main/resources/templates/users/admin/updateUserByAdmin.html
+++ b/SecondProject/src/main/resources/templates/users/admin/updateUserByAdmin.html
@@ -28,8 +28,8 @@
                 <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
             </div>
             <div class="form-group">
-                <label for="loginid">id</label>
-                <input type="text" class="form-control" id="loginid" th:field="*{loginid}" placeholder="">
+                <label for="loginId">id</label>
+                <input type="text" class="form-control" id="loginId" th:field="*{loginId}" placeholder="">
             </div>
             <div class="form-group">
                 <label for="email">email</label>
