--- a/SecondProject/src/main/resources/templates/users/register.html
+++ b/SecondProject/src/main/resources/templates/users/register.html
@@ -1,31 +1,16 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/common ::head('Second')">
-    <!--    <meta charset="utf-8">-->
-    <!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-
-    <!--    &lt;!&ndash; Bootstrap CSS &ndash;&gt;-->
-    <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">-->
-    <!--    <link th:href="@{/form-validation.css}" rel="stylesheet">-->
-
-    <!--    <title>My First</title>-->
 </head>
 
 
 <body>
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('join')">
 </nav>
-<!-- Optional JavaScript; choose one of the two! -->
 
-<!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-<!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
--->
 </body>
 
 <!--내용-->
@@ -41,15 +26,28 @@
             <img class="d-block mx-auto mb-4" src="https://getbootstrap.com/docs/4.5/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
             <h2>회원가입</h2>
         </div>
-
+        <a type="button" th:href="@{/register/{id}/exists}">중복체크</a>
         <div class="row">
             <div class="col-md-8 order-md-1">
                 <form class="needs-validation" novalidate>
+                    <div class="mb-3">
+                        <label for="email">email</label><span class="text-muted">(Required)</span>
+                        <input type="text" th:field = "*{email}" class="form-control" id="email" placeholder="write email" required>
+
+                        <label>
+                            <select class="select" name="email1" id="email1">
+                                <option>직접입력</option>
+                                <option th:value="*{email}" th:text="*{email} + 'naver.com'"></option>
+                                <option>google.com</option>
+                            </select>
+                        </label>
+                    </div>
+
                     <div class="row">
                         <div class="col-md-6 mb-3">
                             <label for="name">Id</label>
-                            <input type="text" th:field="*{loginid}" class="form-control" id="loginid" placeholder="write Id" required>
-                            <a type="button" th:href="@{/register/{id}/exists}">중복체크</a>
+                            <input type="text" th:field="*{loginId}" class="form-control" id="loginId" placeholder="write Id" required>
+
                         </div>
                     </div>
 
@@ -69,13 +67,7 @@
                         </div>
                     </div>
 
-                    <div class="mb-3">
-                        <label for="email">email</label><span class="text-muted">(Optional)</span>
-                        <input type="text" th:field = "*{email}" class="form-control" id="email" placeholder="write email" required>
-                        <div class="invalid-feedback">
-                            Please enter your shipping zipcode.
-                        </div>
-                    </div>
+
 
                     <hr class="mb-4">
                     <button class="btn btn-primary btn-lg btn-block" type="submit">완료</button>
