--- a/SecondProject/src/main/resources/templates/users/userDetail_no_use.html
+++ b/SecondProject/src/main/resources/templates/users/userDetail_no_use.html
@@ -32,7 +32,7 @@
                 <tbody>
                 <tr>
                     <th>아이디</th>
-                    <td th:text="${memberForm.loginid}"></td>
+                    <td th:text="${memberForm.loginId}"></td>
                 </tr>
                 <tr>
                     <th>이메일</th>
