--- a/SecondProject/src/main/resources/templates/users/loginForm.html
+++ b/SecondProject/src/main/resources/templates/users/loginForm.html
@@ -15,7 +15,7 @@
     </div>
     <form role="form" action="/login" method="post">
         <div>
-            <label>로그인 ID</label>
+            <label>로그인 email</label>
             <input type="text" name="username">
         </div>
         <div>
