--- a/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
+++ b/SecondProject/src/main/resources/templates/boards/updateBoardForm.html
@@ -29,12 +29,12 @@
                 <label for="title">제목</label>
                 <input type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
             </div>
-            <div class="form-group">
-                <input type="hidden" th:field="*{name}" />
-            </div>
-            <div class="form-group">
-                <input type="hidden" th:field="*{loginId}" />
-            </div>
+<!--            <div class="form-group">-->
+<!--                <input type="hidden" th:field="*{name}" />-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <input type="hidden" th:field="*{nickname}" />-->
+<!--            </div>-->
             <label for="content">내용</label>
             <textarea class="form-control" id="content" th:field="*{content}" rows="10"></textarea>
         </div>
