--- a/SecondProject/src/main/resources/templates/users/admin/updateUserByAdmin.html
+++ b/SecondProject/src/main/resources/templates/users/admin/updateUserByAdmin.html
@@ -28,12 +28,8 @@
                 <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="">
             </div>
             <div class="form-group">
-                <label for="loginId">id</label>
-                <input type="text" class="form-control" id="loginId" th:field="*{loginId}" placeholder="">
-            </div>
-            <div class="form-group">
-                <label for="email">email</label>
-                <input type="text" class="form-control" id="email" th:field="*{email}" placeholder="">
+                <label for="nickname">닉네임</label>
+                <input type="text" class="form-control" id="nickname" th:field="*{nickname}" placeholder="">
             </div>
             <div class="form-group">
                 <div>role</div>
