--- a/SecondProject/src/main/resources/templates/users/admin/userDetailByAdmin.html
+++ b/SecondProject/src/main/resources/templates/users/admin/userDetailByAdmin.html
@@ -31,8 +31,8 @@
                 </thead>
                 <tbody>
                 <tr>
-                    <th>아이디</th>
-                    <td th:text="${memberForm.loginId}"></td>
+                    <th>닉네임</th>
+                    <td th:text="${memberForm.nickname}"></td>
                 </tr>
                 <tr>
                     <th>이메일</th>
@@ -77,7 +77,7 @@
             <td th:text="${board.id}"></td>
             <td> <a th:text="${board.title}" th:href="@{/boards/{id} (id=${board.id})}"></a></td>
             <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
-            <td th:text="${board.name}"></td>
+            <td th:text="${memberForm.getNickname()}"></td>
         </tr>
         </tbody>
 
