--- a/SecondProject/src/main/resources/templates/users/register.html
+++ b/SecondProject/src/main/resources/templates/users/register.html
@@ -30,23 +30,27 @@
         <div class="row">
             <div class="col-md-8 order-md-1">
                 <form class="needs-validation" novalidate>
-                    <div class="mb-3">
-                        <label for="email">email</label><span class="text-muted">(Required)</span>
-                        <input type="text" th:field = "*{email}" class="form-control" id="email" placeholder="write email" required>
+<!--                    <div class="mb-3">-->
+<!--                        <label for="email">email</label><span class="text-muted">(Required)</span>-->
+<!--                        <input type="text" th:field = "*{email}" class="form-control" id="email" placeholder="write email" required>-->
 
-                        <label>
-                            <select class="select" name="email1" id="email1">
-                                <option>직접입력</option>
-                                <option th:value="*{email}" th:text="*{email} + 'naver.com'"></option>
-                                <option>google.com</option>
-                            </select>
-                        </label>
+<!--                        <label>-->
+<!--                            <select class="select" name="email1" id="email1">-->
+<!--                                <option>직접입력</option>-->
+<!--                                <option th:value="*{email}" th:text="*{email} + 'naver.com'"></option>-->
+<!--                                <option>google.com</option>-->
+<!--                            </select>-->
+<!--                        </label>-->
+<!--                    </div>-->
+                    <div class="mb-3">
+                        <label for="email">이메일</label>
+                        <input type="text" th:field = "*{email}" class="form-control" id="email" placeholder="write email" required>
                     </div>
 
                     <div class="row">
                         <div class="col-md-6 mb-3">
-                            <label for="name">Id</label>
-                            <input type="text" th:field="*{loginId}" class="form-control" id="loginId" placeholder="write Id" required>
+                            <label for="name">닉네임</label>
+                            <input type="text" th:field="*{nickname}" class="form-control" id="nickname" placeholder="write Id" required>
 
                         </div>
                     </div>
