--- a/SecondProject/src/main/resources/templates/boards/readBoard.html
+++ b/SecondProject/src/main/resources/templates/boards/readBoard.html
@@ -33,7 +33,7 @@
                 <tbody>
                 <tr>
                     <th>작성자</th>
-                    <td th:text="${boardForm.getMember().getNickname()}"></td>
+                    <td th:text="${boardForm.nickname}"></td>
                 </tr>
                 <tr>
                     <td colspan="2" th:text="${boardForm.content}"></td>
