--- a/SecondProject/src/main/resources/templates/orders/item/itemCategories.html
+++ b/SecondProject/src/main/resources/templates/orders/item/itemCategories.html
@@ -6,7 +6,7 @@
 
 
 <body>
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('board')">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top" th:replace="fragments/common :: menu('items')">
 </nav>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
@@ -16,21 +16,11 @@
 
 <body class="bg-light">
 <div class="container">
-    <h2>상품 목록</h2>
+    <h2>상품 카테고리</h2>
     <table class="table">
-        <thead>
-        <tr>
-            <th scope="col">상품명</th>
-            <th scope="col">이미지</th>
-            <th scope="col">가격</th>
-        </tr>
-        </thead>
         <tbody>
-        <tr th:each="item : ${itemList}">
-            <td> <a th:text="${item.name}" th:href="@{/items/{categoryId}/{itemId} (itemId=${item.id})}"></a></td>
-            <!--            <td> <a th:text="${board.title}" th:href="@{/boards/form(id=${board.id})}"></a></td>-->
-            <td>이미지</td>
-            <td th:text="${item.price}"></td>
+        <tr th:each="category : ${categoryList}">
+            <td> <a th:text="${category.name}" th:href="@{/items/{categoryId} (categoryId=${category.id})}"></a></td>
         </tr>
         </tbody>
 
